Add all project source files v1.4.0