@@ -8,8 +8,10 @@ import com.airbamin.desktop.utils.WindowsNotification;
 import javafx.animation.PauseTransition;
 import javafx.application.Platform;
 import javafx.fxml.FXML;
+import javafx.scene.control.Hyperlink;
 import javafx.scene.control.Label;
 import javafx.scene.control.ProgressBar;
+import javafx.scene.image.ImageView;
 import javafx.scene.shape.SVGPath;
 import javafx.util.Duration;
 import java.awt.Desktop;
@@ -25,6 +27,10 @@ public class TransferController {
     @FXML
     private javafx.scene.layout.BorderPane rootPane;
     @FXML
+    private ImageView qrImageView;
+    @FXML
+    private Hyperlink connectionLink;
+    @FXML
     private Label connectionStatusLabel;
     @FXML
     private Label uploadDirLabel;
@@ -35,6 +41,7 @@ public class TransferController {
 
     private final LocalTransferServer localServer = LocalTransferServer.getInstance();
     private final TransferService transferService = localServer.getTransferService();
+    private final com.google.zxing.qrcode.QRCodeWriter qrWriter = new com.google.zxing.qrcode.QRCodeWriter();
     private final AtomicReference<String> pendingStatus = new AtomicReference<>();
     private final PauseTransition resetTimer = new PauseTransition(Duration.seconds(1.5));
     private ResourceBundle bundle;
@@ -95,7 +102,7 @@ public class TransferController {
         if (lang == null || lang.isBlank()) {
             lang = "en";
         }
-        Locale locale = lang.equals("ar") ? Locale.of("ar") : Locale.ENGLISH;
+        Locale locale = lang.equals("ar") ? new Locale("ar") : Locale.ENGLISH;
         bundle = ResourceBundle.getBundle("com.airbamin.desktop.messages_" + lang, locale);
 
         uploadDirLabel.setText(transferService.getUploadDir().toAbsolutePath().toString());
@@ -103,6 +110,14 @@ public class TransferController {
         setStatusMessage(bundle.getString("transfer.status.waiting"));
 
         localServer.addListener(serverListener);
+
+        // Ensure server is running and generate QR
+        boolean started = localServer.start();
+        if (started) {
+            refreshLink();
+        } else {
+            updateConnectionLabel("Server error: ports in use");
+        }
 
         String lastIp = localServer.getLastConnectedIp();
         if (lastIp != null) {
@@ -118,6 +133,43 @@ public class TransferController {
                     localServer.removeListener(serverListener);
                 }
             });
+        }
+
+        if (connectionLink != null) {
+            connectionLink.setOnAction(e -> {
+                String url = connectionLink.getText();
+                if (url != null && !url.isBlank()) {
+                    try {
+                        Desktop.getDesktop().browse(java.net.URI.create(url));
+                    } catch (Exception ignored) {
+                    }
+                }
+            });
+        }
+    }
+
+    private void refreshLink() {
+        int port = localServer.getActivePort();
+        String url = transferService.buildPhoneUrl(com.airbamin.desktop.network.NetworkUtils.NetworkMode.AUTO, "",
+                port);
+        if (connectionLink != null) {
+            connectionLink.setText(url);
+        }
+        generateQr(url + "/");
+    }
+
+    private void generateQr(String text) {
+        if (qrImageView == null)
+            return;
+        try {
+            var matrix = qrWriter.encode(text, com.google.zxing.BarcodeFormat.QR_CODE, 200, 200);
+            java.io.ByteArrayOutputStream out = new java.io.ByteArrayOutputStream();
+            com.google.zxing.client.j2se.MatrixToImageWriter.writeToStream(matrix, "PNG", out);
+            javafx.scene.image.Image image = new javafx.scene.image.Image(
+                    new java.io.ByteArrayInputStream(out.toByteArray()));
+            qrImageView.setImage(image);
+        } catch (Exception e) {
+            // ignore
         }
     }
 
